moodInput-view.fxml and moodInputController, settings-view.fxml and SettingsController updated for UI

--- a/src/main/resources/com/example/cab302/settings-view.fxml
+++ b/src/main/resources/com/example/cab302/settings-view.fxml
@@ -1,26 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.cab302.SettingsController">
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="com.example.cab302.SettingsController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-    <Label text="Settings - Customize Your Experience" style="-fx-font-size: 18px;"/>
-    <VBox spacing="10.0">
-        <CheckBox text="Enable Track Usage - App &amp; Computer" fx:id="trackUsageCheckBox"/>
-        <CheckBox text="Enable Facial Recognition" fx:id="facialRecognitionCheckBox"/>
-        <HBox spacing="10.0">
-            <Label text="Theme Mode:"/>
-            <ToggleButton fx:id="themeToggleButton" text="Light" onAction="#onThemeToggle"/>
-        </HBox>
-        <CheckBox text="Enable Game Features" fx:id="gameFeaturesCheckBox"/>
-        <CheckBox text="Enable Achievement Features" fx:id="achievementFeaturesCheckBox"/>
-        <CheckBox text="Enable Notifications" fx:id="notificationsCheckBox"/>
-        <HBox alignment="CENTER" spacing="20.0">
-            <Button text="Save Settings" onAction="#onSaveSettings"/>
-            <Button text="Cancel" onAction="#onCancelSettings"/>
-        </HBox>
-    </VBox>
+   <children>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0">
+         <children>
+            <MenuBar VBox.vgrow="NEVER">
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="New" />
+                        <MenuItem mnemonicParsing="false" text="Open…" />
+                        <Menu mnemonicParsing="false" text="Open Recent" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Close" />
+                        <MenuItem mnemonicParsing="false" text="Save" />
+                        <MenuItem mnemonicParsing="false" text="Save As…" />
+                        <MenuItem mnemonicParsing="false" text="Revert" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Preferences…" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Quit" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Edit">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Undo" />
+                        <MenuItem mnemonicParsing="false" text="Redo" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Cut" />
+                        <MenuItem mnemonicParsing="false" text="Copy" />
+                        <MenuItem mnemonicParsing="false" text="Paste" />
+                        <MenuItem mnemonicParsing="false" text="Delete" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Select All" />
+                        <MenuItem mnemonicParsing="false" text="Unselect All" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Help">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="About MyHelloApp" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
+            <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="780.0" stroke="TRANSPARENT" strokeType="INSIDE" width="1280.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0" startX="1.0" startY="0.21904761904761902">
+                           <stops>
+                              <Stop color="#2a6274" />
+                              <Stop color="WHITE" offset="1.0" />
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="569.0" layoutX="32.0" layoutY="211.0" opacity="0.46" stroke="TRANSPARENT" strokeType="INSIDE" width="214.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a6273" height="569.0" layoutX="307.0" layoutY="179.0" stroke="TRANSPARENT" strokeType="INSIDE" width="924.0" />
+                  <Button layoutX="57.0" layoutY="232.0" mnemonicParsing="false" onAction="#switchToLanding" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Month View" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="56.0" layoutY="289.0" mnemonicParsing="false" onAction="#switchToMoodInput" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Track Mood" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="452.0" layoutX="323.0" layoutY="245.0" stroke="TRANSPARENT" strokeType="INSIDE" width="888.0" />
+                  <Button layoutX="57.0" layoutY="346.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Settings" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Text fill="WHITE" layoutX="87.0" layoutY="204.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MENU" textAlignment="CENTER" wrappingWidth="118.0341796875">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="210.0" fitWidth="365.0">
+                     <image>
+                        <Image url="@images/Mood.e_LightMode.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" layoutX="684.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS" wrappingWidth="171.0">
+                     <font>
+                        <Font name="System Bold" size="36.0" />
+                     </font>
+                  </Text>
+                  <Button layoutX="57.0" layoutY="405.0" mnemonicParsing="false" onAction="#switchToData" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Reports" textFill="WHITE">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                   <Label layoutX="662.0" layoutY="197.0" style="-fx-font-size: 18px;" text="Customize Your Experience" textFill="WHITE" />
+                   <VBox layoutX="650.0" layoutY="318.0" prefHeight="204.0" prefWidth="238.0" spacing="10.0">
+                      <children>
+                          <CheckBox fx:id="trackUsageCheckBox" text="Enable Track Usage - App &amp; Computer" />
+                          <CheckBox fx:id="facialRecognitionCheckBox" text="Enable Facial Recognition" />
+                          <HBox spacing="10.0">
+                             <children>
+                                 <Label text="Theme Mode:" />
+                                 <ToggleButton fx:id="themeToggleButton" onAction="#onThemeToggle" text="Light" />
+                             </children>
+                          </HBox>
+                          <CheckBox fx:id="gameFeaturesCheckBox" text="Enable Game Features" />
+                          <CheckBox fx:id="achievementFeaturesCheckBox" text="Enable Achievement Features" />
+                          <CheckBox fx:id="notificationsCheckBox" text="Enable Notifications" />
+                          <HBox alignment="CENTER" spacing="20.0" />
+                      </children>
+                   </VBox>
+                     <Button layoutX="1044.0" layoutY="637.0" onAction="#onSaveSettings" text="Save Settings" />
+                     <Button layoutX="354.0" layoutY="652.0" onAction="#onCancelSettings" text="Cancel" />
+               </children>
+            </AnchorPane>
+         </children>
+      </VBox>
+   </children>
 </VBox>
