--- a/src/main/resources/com/example/cab302/moodInput-view.fxml
+++ b/src/main/resources/com/example/cab302/moodInput-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cab302.controller.moodInputController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -65,12 +65,12 @@
                 </Rectangle>
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="569.0" layoutX="32.0" layoutY="211.0" opacity="0.46" stroke="TRANSPARENT" strokeType="INSIDE" width="214.0" />
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2a6273" height="569.0" layoutX="307.0" layoutY="179.0" stroke="TRANSPARENT" strokeType="INSIDE" width="924.0" />
-                <Button layoutX="55.0" layoutY="230.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Button" textFill="WHITE">
+                <Button layoutX="57.0" layoutY="232.0" mnemonicParsing="false" onAction="#switchToLanding" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Month View" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Button>
-                <Button layoutX="55.0" layoutY="287.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Button" textFill="WHITE">
+                <Button layoutX="56.0" layoutY="289.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Track Mood" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -93,7 +93,7 @@
                <font>
                   <Font name="System Bold" size="24.0" />
                </font></Text>
-                <Button layoutX="55.0" layoutY="346.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Button" textFill="WHITE">
+                <Button layoutX="57.0" layoutY="346.0" mnemonicParsing="false" onAction="#switchToSettings" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Settings" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -135,6 +135,11 @@
                   <Font size="14.0" />
                </font>
             </Text>
+            <Button layoutX="57.0" layoutY="405.0" mnemonicParsing="false" onAction="#switchToData" prefHeight="44.0" prefWidth="189.0" style="-fx-background-color: #143C49;" text="Reports" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
             </children>
         </AnchorPane>
     </children>
