--- a/src/main/resources/com/example/cab302/moodInput-view.fxml
+++ b/src/main/resources/com/example/cab302/moodInput-view.fxml
@@ -92,7 +92,7 @@
                 <RadioButton fx:id="confidentRadioButton" layoutX="700.0" layoutY="460.0" mnemonicParsing="false" text="Confident" />
                 <RadioButton fx:id="tiredRadioButton" layoutX="700.0" layoutY="490.0" mnemonicParsing="false" text="Tired" />
 
-                <Button layoutX="1087.0" layoutY="626.0" mnemonicParsing="false" style="-fx-background-color: #143C49;" text="Submit" textFill="WHITE">
+                <Button layoutX="1087.0" layoutY="626.0" mnemonicParsing="false" onAction="#handleSubmit" style="-fx-background-color: #143C49;" text="Submit" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
                     </font>
