implemented onCloseApp exit button on all pages

--- a/src/main/resources/com/example/cab302/landing-view.fxml
+++ b/src/main/resources/com/example/cab302/landing-view.fxml
@@ -140,7 +140,7 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="100.0" layoutX="719.0" layoutY="635.0" stroke="TRANSPARENT" strokeType="INSIDE" width="100.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="100.0" layoutX="587.0" layoutY="635.0" stroke="TRANSPARENT" strokeType="INSIDE" width="100.0" />
             <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="100.0" layoutX="323.0" layoutY="635.0" stroke="TRANSPARENT" strokeType="INSIDE" width="100.0" />
-            <Button layoutX="93.0" layoutY="685.0" mnemonicParsing="false" prefHeight="13.0" prefWidth="118.0" style="-fx-background-color: #143C49;" text="Exit" textFill="WHITE">
+            <Button layoutX="93.0" layoutY="685.0" mnemonicParsing="false" onAction="#onCloseApp" prefHeight="13.0" prefWidth="118.0" style="-fx-background-color: #143C49;" text="Exit" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
