--- a/src/main/resources/com/example/cab302/settings-view.fxml
+++ b/src/main/resources/com/example/cab302/settings-view.fxml
@@ -75,7 +75,7 @@
                         <Font size="20.0" />
                      </font>
                   </Button>
-                  <Button layoutX="93.0" layoutY="685.0" mnemonicParsing="false" prefHeight="13.0" prefWidth="118.0" style="-fx-background-color: #143C49;" text="Exit" textFill="WHITE">
+                  <Button layoutX="93.0" layoutY="685.0" mnemonicParsing="false" onAction="#onCloseApp" prefHeight="13.0" prefWidth="118.0" style="-fx-background-color: #143C49;" text="Exit" textFill="WHITE">
                      <font>
                         <Font size="20.0" />
                      </font>
